--- a/static/styles/search.css
+++ b/static/styles/search.css
@@ -1,3 +1,8 @@
+*,
+a {
+  text-decoration: none;
+}
+
 .header-search {
   width: 100%;
   height: 100px;
@@ -11,7 +16,7 @@
 }
 
 h1 {
-  font-family: "Lexend", sans-serif;
+  font-family: 'Lexend', sans-serif;
   font-size: 26px;
   font-weight: 600;
   line-height: 24px;
@@ -48,13 +53,13 @@ h1 {
 .star-cb-group > input + label:before {
   display: inline-block;
   text-indent: -9999px;
-  content: "\2606";
+  content: '\2606';
   color: #888;
 }
 .star-cb-group > input:checked ~ label:before,
 .star-cb-group > input + label:hover ~ label:before,
 .star-cb-group > input + label:hover:before {
-  content: "\2605";
+  content: '\2605';
   color: #e52;
   text-shadow: 0 0 1px #333;
 }
@@ -67,15 +72,87 @@ h1 {
   width: 0.5em;
 }
 .star-cb-group:hover > input + label:before {
-  content: "\2606";
+  content: '\2606';
   color: #888;
   text-shadow: none;
 }
 .star-cb-group:hover > input + label:hover ~ label:before,
 .star-cb-group:hover > input + label:hover:before {
-  content: "\2605";
+  content: '\2605';
   color: #e52;
   text-shadow: 0 0 1px #333;
 }
 
 /*===================== DRAWER MENU ======================*/
+.category-see-all {
+  font-family: 'Lexend', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #00a55d;
+}
+.category-title {
+  font-family: 'Lexend', sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #666e80;
+}
+
+.hotel-item {
+  padding: 0px 0px 16.1px 0px;
+  border-radius: 24px;
+  box-shadow: 0px 14px 21px 0px #dadada40;
+  background: #fff;
+}
+
+.hotel-image {
+  width: 100%;
+  height: 151px;
+  border-radius: 24px;
+  background: linear-gradient(180deg, rgba(102, 186, 122, 0.2) 0%, rgba(74, 150, 122, 0) 100%);
+  overflow: hidden;
+}
+.hotel-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.hotel-detail .hotel-name {
+  font-family: 'Lexend', sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 23px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #00a55d;
+}
+.hotel-description {
+  display: -webkit-box;
+  max-width: 200px;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  font-family: 'Lexend', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: #98a1b3;
+}
+
+.hotel-price {
+  font-family: 'Lexend', sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 18px;
+  letter-spacing: 0em;
+  text-align: right;
+  color: #666e80;
+}
