--- a/home/Templates/home.html
+++ b/home/Templates/home.html
@@ -75,7 +75,7 @@
           {% for hotel in result %}
           <div class="col-5 hotel-item d-flex align-items-center flex-column gap-2">
             <div class="hotel-image">
-              <img src="https://images.unsplash.com/photo-1575936123452-b67c3203c357?auto=format&fit=crop&q=80&w=1000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2V8ZW58MHx8MHx8fDA%3D"/>
+              <img src="{{hotel.image}}"/>
             </div>
             <div class="hotel-detail p-2">
               <a href="{% url 'hotel_detail' hotel.hotelcode %}"><h6 class="hotel-name">{{ hotel.hotelname }}</h6></a>
