--- a/home/Templates/home.html
+++ b/home/Templates/home.html
@@ -51,13 +51,13 @@
             <div class="carousel-item active">
               <div class="container">
                 <image
-                  src="https://images.unsplash.com/photo-1575936123452-b67c3203c357?auto=format&fit=crop&q=80&w=1000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2V8ZW58MHx8MHx8fDA%3D" />
+                  src="{% static 'icon/banner.png' %}" />
               </div>
             </div>
             <div class="carousel-item">
               <div class="container">
                 <image
-                  src="https://images.unsplash.com/photo-1575936123452-b67c3203c357?auto=format&fit=crop&q=80&w=1000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8aW1hZ2V8ZW58MHx8MHx8fDA%3D" />
+                src="{% static 'icon/banner-2.jpg' %}" />
               </div>
             </div>
           </div>
