--- a/home/Templates/booking_detail.html
+++ b/home/Templates/booking_detail.html
@@ -30,7 +30,7 @@
           </div>
           <div class="d-flex justify-content-between align-items-center px-3 w-100">
             <p class="booking-detail-label">Hotel ID:</p>
-            <p class="booking-detail-info">{{ booking.hotelID }}</p>
+            <p class="booking-detail-info">{{ booking.roomId }}</p>
           </div>
           <hr class="hr" style="color: #00a55d; margin: 5px" />
           <div class="d-flex justify-content-between align-items-left px-3 w-100 flex-column gap-1">
